--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   scrape:
-    runs-on: ubuntu-latest 
+    runs-on: ubuntu-latest
     steps:
     # Step 1: Prepare the environment
     - name: Check out this repo
@@ -19,8 +19,14 @@ jobs:
     - name: Fetch latest data
       run: |-        
         curl "https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_day.csv" -o usgs_current.csv
-    # Step 3: Commit and push
-    - name: Commit and push
+    # Step 3: Install requirements, so Python script can run
+    - name: Install requirements
+      run: python -m pip install pandas 
+    # Step 4    
+    - name: Run script to create main csv
+      run: python get_all_data.py     
+    # Step 5
+    - name: Commit and push if it changed
       run: |-
         git config user.name "Automated"
         git config user.email "actions@users.noreply.github.com"
